--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Flicks</string>
+    <string name="api_base_url">https://api.themoviedb.org/3</string>
 </resources>
